[package]
name = "bdwgc-alloc"
description = "impl GlobalAlloc for bdwgc"
version = "0.3.0"
authors = ["swgillespie <sean.william.g@gmail.com>", "Yota Toyama <raviqqe@gmail.com>"]
repository = "https://github.com/raviqqe/bdwgc-alloc"
edition = "2018"
license = "MIT"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
autotools = "0.2"
