[package]
name = "bdwgc-alloc"
description = "impl GlobalAlloc for bdwgc"
version = "0.5.1"
authors = ["swgillespie <sean.william.g@gmail.com>", "Yota Toyama <raviqqe@gmail.com>"]
repository = "https://github.com/raviqqe/bdwgc-alloc"
edition = "2018"
license = "MIT"
build = "build.rs"

[features]
default = ["autotools"]

[dependencies]
libc = "0.2"

[build-dependencies]
autotools = { version = "0.2", optional = true }
cmake = { version = "0.1", optional = true }
