[package]
name = "bdwgc-alloc"
version = "0.6.11"
edition = "2024"
description = "impl GlobalAlloc for bdwgc"
repository = "https://github.com/raviqqe/bdwgc-alloc"
license = "MIT"

[dependencies]
libc = "0.2"

[build-dependencies]
autotools = { version = "0.2", optional = true }
cmake = { version = "0.1", optional = true }

[features]
default = ["autotools"]
